feat(SWAGGER): Adicionado config necessário para swagger no application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 spring:
 
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
